--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Slider Fill</title>
-    <link rel="stylesheet" href="../../resources/css/v2/sencha-touch.css" type="text/css">
-    <script type="text/javascript" src="../../sencha-touch-all-debug.js"></script>
+    <link rel="stylesheet" href="http://cdn.sencha.io/touch/sencha-touch-2.2.1/resources/css/sencha-touch.css" type="text/css">
+    <script type="text/javascript" src="http://cdn.sencha.io/touch/sencha-touch-2.2.1/sencha-touch-all-debug.js"></script>
     <script type="text/javascript" src="src/SliderFill.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
 
