--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Slider Fill</title>
     <link rel="stylesheet" href="http://cdn.sencha.io/touch/sencha-touch-2.1.0/resources/css/sencha-touch.css" type="text/css">
     <script type="text/javascript" src="http://cdn.sencha.io/touch/sencha-touch-2.1.0/sencha-touch-all-debug.js"></script>
-    <script type="text/javascript" src="https://raw.github.com/tomalex0/senchatouch-sliderfillv2/master/src/SliderFill.js"></script>
-    <script type="text/javascript" src="https://raw.github.com/tomalex0/senchatouch-sliderfillv2/master/src/index.js"></script>
+    <script type="text/javascript" src="javascripts/SliderFill.js"></script>
+    <script type="text/javascript" src="javascripts/index.js"></script>
 
     <style type="text/css">
         .demos-loading {
